--- a/lib/mock/templates/playbook.yml.j2
+++ b/lib/mock/templates/playbook.yml.j2
@@ -14,20 +14,25 @@
     - name: Install python packages with pip
       pip: name={{ '{{ item }}' }} state=latest
       with_items: tasks.pip.packages
+      when: tasks.pip is defined
 
     - name: Install ruby packages with gem
       gem: name={{ '{{ item }}' }} state=latest
       with_items: tasks.gem.packages
+      when: tasks.gem is defined
 
     - name: Setup dotfiles from github
       git: repo=git@github.com:{{ '{{ tasks.dotfiles.repo }}' }}.git dest=~/.dotfiles force=no update=no
+      when: tasks.dotfiles is defined
 
     - name: Symlink dotfiles
       file: path=~/{{ '{{ item }}' }} src=~/.dotfiles/{{ '{{ item }}' }} state=link
       with_items: tasks.dotfiles.list
+      when: tasks.dotfiles is defined
 
     - name: Install vim pathogen
       shell: mkdir -p ~/.vim/autoload ~/.vim/bundle && curl -LSso ~/.vim/autoload/pathogen.vim https://tpo.pe/pathogen.vim
+      when: tasks.pathogen is defined
 
     - name: Install pathogen plugins
       git: repo=git@github.com:{{ '{{ item.repo }}' }}.git dest=~/.vim/bundle/{{ '{{ item.name }}'}} force=no
